// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.tree > rendering combined tree 1`] = `
.c5 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c5 * {
  width: 1px;
  height: 1px;
}

.c26 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(5, 104, 174);
}

.c10 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c10 > span {
  display: inline-block;
}

.c10.c10 {
  max-width: unset;
}

.c25 .c10 {
  color: inherit;
}

.c19 {
  align-items: center;
  border-radius: 8px;
  display: inline-flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  justify-content: center;
  outline: transparent solid 1px;
  padding: 0px 5px;
  vertical-align: middle;
  background-color: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c19 > * {
  flex-shrink: 0;
}

.c22 {
  align-items: center;
  background-color: rgb(183, 192, 199);
  border-radius: 8px;
  color: rgb(77, 77, 77);
  display: inline-flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  justify-content: center;
  outline: transparent solid 1px;
  padding: 0px 5px;
  vertical-align: middle;
}

.c22 > * {
  flex-shrink: 0;
}

.c27 {
  align-items: center;
  border-radius: 8px;
  display: inline-flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  justify-content: center;
  outline: transparent solid 1px;
  padding: 0px 5px;
  vertical-align: middle;
  background-color: rgb(201, 29, 29);
  color: rgb(255, 255, 255);
}

.c27 > * {
  flex-shrink: 0;
}

.c28 {
  display: inline-flex;
  margin-left: 2px;
}

.c28 > * {
  flex-shrink: 0;
}

.c28 .c9 {
  color: inherit;
}

.c20 {
  height: auto;
  line-height: 1rem;
  margin: 0px;
  padding: 0px;
  animation: 0.5s ease 0s 1 normal none running k0, 0.5s ease 0s 1 normal none running k1;
}

.c23 {
  height: auto;
  line-height: 1rem;
  margin: 0px;
  padding: 0px;
  animation: 0.5s ease 0s 1 normal none running k0, 0.5s ease 0s 1 normal none running k2;
}

.c7 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c7 .c9 {
  user-select: none;
}

.c7 .c9 {
  color: inherit;
}

.c7 .c9 {
  font-size: inherit;
}

.c7:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c25 .c7.c7 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c25 .c7.c7:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c25 .c7.c7:not(:active):not(:hover):not(:focus) .c9:not(.StyledVariantIconWrapper-sc-cNOyXs) {
  color: inherit;
}

.c25 .c7.c7:focus .c9 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c7.c7 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c7.c7 > .c9 {
  display: block;
}

.c38 .c9 {
  user-select: none;
}

.c38 .c9 {
  color: inherit;
}

.c38 .c9 {
  font-size: inherit;
}

.c38.c38 .c9 {
  color: inherit;
}

.c25 .c38 .c9 {
  font-size: 1.25rem;
}

.c25 .c38.c38 {
  color: rgb(169, 179, 188);
  width: auto;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c38.c38 > .c9 {
  display: block;
}

.c0 {
  isolation: isolate;
}

.c1 {
  list-style: none;
  padding-left: 0px;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
}

.c3 {
  position: relative;
}

.c3 > .dnd-dropTarget {
  bottom: 0px;
  height: 8px;
  position: absolute;
  width: 100%;
}

.c3 > .dnd-dropTarget + .dnd-dropTarget {
  bottom: auto;
  top: 0px;
}

[data-role="table-body-cell"] > .c2 > .c31.c31 {
  padding-left: calc(40px);
}

[data-role="table-body-cell"] > .c2 > .c32.c32 {
  padding-left: calc(72px);
}

[data-role="table-body-cell"] > .c2 > .c33.c33 {
  padding-left: calc(104px);
}

[data-role="table-body-cell"] > .c2 > .c34.c34 {
  padding-left: calc(136px);
}

.c17 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
  background-color: rgb(241, 242, 244);
  color: rgb(169, 179, 188);
  font-weight: 400;
}

.c17::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c17.c17 {
  padding-left: calc(72px);
}

.c17:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c17 .c13 .c9 {
  color: inherit;
}

[data-role="table-body-cell"] > .c2 > .c35.c35 {
  padding-left: calc(104px);
}

[data-role="table-body-cell"] > .c2 > .c36.c36 {
  padding-left: calc(136px);
}

[data-role="table-body-cell"] > .c2 > .c37.c37 {
  padding-left: calc(104px);
}

.c4 {
  cursor: pointer;
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(64px);
  position: relative;
}

.c4::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c4.c4 {
  padding-left: calc(40px);
}

.c4:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c21 {
  cursor: pointer;
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(128px);
  position: relative;
}

.c21::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c21.c21 {
  padding-left: calc(104px);
}

.c21:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c29 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
  background-color: rgb(245, 251, 255);
  cursor: default;
}

.c29::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c29.c29 {
  padding-left: calc(72px);
}

.c29::before {
  border-left: 4px solid rgb(5, 104, 174);
}

.c30 {
  cursor: pointer;
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
}

.c30::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c30.c30 {
  padding-left: calc(72px);
}

.c30:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6 {
  align-items: flex-start;
  display: flex;
  height: auto;
  margin-left: -40px;
  position: absolute;
  text-decoration: none;
}

.c8 {
  border-radius: 50%;
  font-size: 1.5rem;
  height: 32px;
  margin: 8px 0px;
  min-height: 32px;
  width: 32px;
}

.c8:not(:disabled) {
  color: rgb(5, 104, 174);
}

.c8:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  outline-offset: -1px;
}

.c24 {
  border-radius: 50%;
  font-size: 1.5rem;
  height: 32px;
  margin: 8px 0px;
  min-height: 32px;
  width: 32px;
}

.c24:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  outline-offset: -1px;
}

.c11 {
  font-weight: 600;
}

.c16 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: normal;
  overflow: hidden;
  padding: 16px 0px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c14 {
  align-items: flex-start;
  box-sizing: border-box;
  display: flex;
  height: auto;
  justify-content: center;
  left: 0px;
  min-height: 48px;
  padding: 16px 0px;
  text-align: center;
  vertical-align: middle;
}

.c14 > * {
  display: flex;
  justify-content: center;
}

.c14 > :not(.c18):not(.c25) {
  font-size: 1rem;
  max-height: 20px;
  width: 20px;
}

.c14 + .c15 {
  margin-left: 8px;
}

.c12 {
  display: flex;
  position: relative;
}

@media (pointer: coarse) {
  .c7:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c7:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c7:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c25 .c7.c7:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c25 .c7.c7:active .c9 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c25 .c7.c7:hover .c9 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c17:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c4:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c21:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c21:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c21:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c29:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c29:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c30:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c30:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c30:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c8:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    color: rgb(5, 104, 174);
  }
}

@media (pointer: fine) {
  .c8:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c24:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    color: rgb(5, 104, 174);
  }
}

@media (pointer: fine) {
  .c24:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    color: rgb(213, 0, 117);
  }
}

@keyframes k2 {
  0% {
    transform: translate3d(0px, -3px, 0px);
  }

  100% {
    transform: translateZ(0px);
  }
}

@keyframes k1 {
  0% {
    transform: translate3d(0px, 3px, 0px);
  }

  100% {
    transform: translateZ(0px);
  }
}

@keyframes k0 {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

<div
  class="c0 treeWidget"
  data-role="tree"
  id="combined-behaviour"
>
  <div
    class="c1 treeWidget__nodes"
    data-role="tree-nodes"
    id="tree-root-node-combined-behaviour"
    role="list"
  >
    <div
      class="c2 c3 treeWidget__node treeWidget__node--level-0"
      data-role="tree-node"
      data-tree-level="0"
      id="tree-node-1"
      role="listitem"
    >
      <div
        class="c4 treeWidget__nodeContent treeWidget__nodeContent--interactive"
        data-role="tree-node-content"
        id="tree-node-content-1"
        tabindex="0"
        title="Selectable"
      >
        <span
          class="c5 -u-unseenButRead"
          data-role="hidden-text"
        >
          Selectable, 
        </span>
        <div
          class="c6 treeWidget__nodeArrow treeWidget__nodeArrow--active"
          data-role="tree-node-expander"
          id="tree-node-arrow-1"
        >
          <button
            aria-expanded="true"
            aria-label="Collapse subitems"
            aria-labelledby="tree-node-name-1"
            class="c7 button button--icon c8"
            data-role="button"
            data-type="icon"
            title="Collapse subitems"
            type="button"
          >
            <i
              class="c9 c10 plasma-icon c11"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                expand_more
              </span>
            </i>
          </button>
        </div>
        <div
          class="c12 treeWidget__nodeTitle"
          data-role="tree-node-title"
          id="tree-node-title-1"
        >
          <div
            class="c13 c14 treeWidget__nodeIcon"
            data-role="tree-node-icon"
            id="tree-node-icon-1"
          >
            <i
              class="c9 c10 plasma-icon"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                computer
              </span>
            </i>
          </div>
          <div
            class="c15 c16 treeWidget__nodeName"
            data-role="tree-node-name"
            id="tree-node-name-1"
          >
            My Computer
          </div>
        </div>
      </div>
      <div
        class="treeWidget__subnodes"
        data-role="tree-subnodes"
        id="tree-sub-node-1"
        role="list"
      >
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1 disabled-but-expandable"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-2"
          role="listitem"
        >
          <div
            class="c17 treeWidget__nodeContent treeWidget__nodeContent--disabled"
            data-role="tree-node-content"
            id="tree-node-content-2"
          >
            <span
              class="c5 -u-unseenButRead"
              data-role="hidden-text"
            >
              Disabled, 
            </span>
            <div
              class="c6 treeWidget__nodeArrow treeWidget__nodeArrow--active"
              data-role="tree-node-expander"
              id="tree-node-arrow-2"
            >
              <button
                aria-expanded="true"
                aria-label="Collapse subitems"
                aria-labelledby="tree-node-name-2"
                class="c7 button button--icon c8"
                data-role="button"
                data-type="icon"
                title="Collapse subitems"
                type="button"
              >
                <i
                  class="c9 c10 plasma-icon c11"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    expand_more
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c12 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-2"
            >
              <div
                class="c13 c14 treeWidget__nodeIcon"
                data-role="tree-node-icon"
                id="tree-node-icon-2"
              >
                <span
                  class="c18 c19 counter counter--constructive"
                  data-role="counter"
                >
                  <span
                    class="c5 -u-unseenButRead"
                    data-role="hidden-text"
                  >
                    10 Entries
                  </span>
                  <span
                    aria-hidden="true"
                    role="presentation"
                  >
                    <span
                      class="c20 counter__item"
                    >
                      1
                    </span>
                    <span
                      class="c20 counter__item"
                    >
                      0
                    </span>
                  </span>
                </span>
              </div>
              <div
                class="c15 c16 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-2"
              >
                C:
              </div>
            </div>
          </div>
          <div
            class="treeWidget__subnodes"
            data-role="tree-subnodes"
            id="tree-sub-node-2"
            role="list"
          >
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-3"
              role="listitem"
            >
              <div
                class="c21 treeWidget__nodeContent treeWidget__nodeContent--interactive"
                data-role="tree-node-content"
                id="tree-node-content-3"
                tabindex="0"
                title="Selectable"
              >
                <span
                  class="c5 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selectable, 
                </span>
                <div
                  class="c12 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-3"
                >
                  <div
                    class="c13 c14 treeWidget__nodeIcon"
                    data-role="tree-node-icon"
                    id="tree-node-icon-3"
                  >
                    <i
                      class="c9 c10 plasma-icon"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        folder
                      </span>
                    </i>
                  </div>
                  <div
                    class="c15 c16 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-3"
                  >
                    Programs
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-4"
              role="listitem"
            >
              <div
                class="c21 treeWidget__nodeContent treeWidget__nodeContent--interactive"
                data-role="tree-node-content"
                id="tree-node-content-4"
                tabindex="0"
                title="Selectable"
              >
                <span
                  class="c5 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selectable, 
                </span>
                <div
                  class="c12 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-4"
                >
                  <div
                    class="c13 c14 treeWidget__nodeIcon"
                    data-role="tree-node-icon"
                    id="tree-node-icon-4"
                  >
                    <span
                      class="c18 c22 counter"
                      data-role="counter"
                    >
                      <span
                        class="c5 -u-unseenButRead"
                        data-role="hidden-text"
                      >
                        9+ Entries
                      </span>
                      <span
                        aria-hidden="true"
                        class="c23 counter__item"
                        role="presentation"
                      >
                        9+
                      </span>
                    </span>
                  </div>
                  <div
                    class="c15 c16 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-4"
                  >
                    Temp
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-5"
              role="listitem"
            >
              <div
                class="c21 treeWidget__nodeContent treeWidget__nodeContent--interactive"
                data-role="tree-node-content"
                id="tree-node-content-5"
                tabindex="0"
                title="Selectable"
              >
                <span
                  class="c5 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selectable, 
                </span>
                <div
                  class="c6 treeWidget__nodeArrow"
                  data-role="tree-node-expander"
                  id="tree-node-arrow-5"
                >
                  <button
                    aria-expanded="false"
                    aria-label="Expand subitems"
                    aria-labelledby="tree-node-name-5"
                    class="c7 button button--icon c24"
                    data-role="button"
                    data-type="icon"
                    title="Expand subitems"
                    type="button"
                  >
                    <i
                      class="c9 c10 plasma-icon c11"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        chevron_right
                      </span>
                    </i>
                  </button>
                </div>
                <div
                  class="c12 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-5"
                >
                  <div
                    class="c13 c14 treeWidget__nodeIcon"
                    data-role="tree-node-icon"
                    id="tree-node-icon-5"
                  >
                    <img
                      alt=""
                      src="images/dnd_image.png"
                    />
                  </div>
                  <div
                    class="c15 c16 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-5"
                  >
                    ZANS and quiet a long text, that it has to display multiline
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-8"
              role="listitem"
            >
              <div
                class="c21 treeWidget__nodeContent treeWidget__nodeContent--interactive"
                data-role="tree-node-content"
                id="tree-node-content-8"
                tabindex="0"
                title="Selectable"
              >
                <span
                  class="c5 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selectable, 
                </span>
                <div
                  class="c12 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-8"
                >
                  <div
                    class="c13 c14 treeWidget__nodeIcon"
                    data-role="tree-node-icon"
                    id="tree-node-icon-8"
                  >
                    <span
                      class="c25 c26 tooltip"
                      data-role="tooltip-trigger-wrapper"
                      role="tooltip"
                      title=""
                    >
                      <span
                        class="c18 c27 counter counter--destructive"
                        data-role="counter"
                      >
                        <span
                          class="c5 -u-unseenButRead"
                          data-role="hidden-text"
                        >
                          3 Entries
                        </span>
                        <span
                          aria-hidden="true"
                          role="presentation"
                        >
                          <span
                            class="c20 counter__item"
                          >
                            3
                          </span>
                        </span>
                        <span
                          class="c28 counter__addon counter__addon--after"
                        >
                          <i
                            class="c9 c10 plasma-icon"
                            data-role="plasma-icon"
                          >
                            <span
                              aria-hidden="true"
                            >
                              done
                            </span>
                          </i>
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="c15 c16 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-8"
                  >
                    swap.sys
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-9"
              role="listitem"
            >
              <div
                class="c21 treeWidget__nodeContent treeWidget__nodeContent--interactive"
                data-role="tree-node-content"
                id="tree-node-content-9"
                tabindex="0"
                title="Selectable"
              >
                <span
                  class="c5 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selectable, 
                </span>
                <div
                  class="c12 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-9"
                >
                  <div
                    class="c13 c14 treeWidget__nodeIcon"
                    data-role="tree-node-icon"
                    id="tree-node-icon-9"
                  >
                    <i
                      class="c9 c10 plasma-icon"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        folder
                      </span>
                    </i>
                  </div>
                  <div
                    class="c15 c16 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-9"
                  >
                    Locked
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-10"
          role="listitem"
        >
          <div
            aria-selected="true"
            class="c29 treeWidget__nodeContent treeWidget__nodeContent--selected treeWidget__nodeContent--interactive"
            data-role="tree-node-content"
            id="tree-node-content-10"
            tabindex="-1"
            title="Selected"
          >
            <span
              class="c5 -u-unseenButRead"
              data-role="hidden-text"
            >
              Selected, 
            </span>
            <div
              class="c12 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-10"
            >
              <div
                class="c13 c14 treeWidget__nodeIcon"
                data-role="tree-node-icon"
                id="tree-node-icon-10"
              >
                <i
                  class="c9 c10 plasma-icon"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    storage
                  </span>
                </i>
              </div>
              <div
                class="c15 c16 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-10"
              >
                D:
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-11"
          role="listitem"
        >
          <div
            class="c30 treeWidget__nodeContent treeWidget__nodeContent--interactive"
            data-role="tree-node-content"
            id="tree-node-content-11"
            tabindex="0"
            title="Selectable"
          >
            <span
              class="c5 -u-unseenButRead"
              data-role="hidden-text"
            >
              Selectable, 
            </span>
            <div
              class="c6 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-11"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-11"
                class="c7 button button--icon c24"
                data-role="button"
                data-type="icon"
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c9 c10 plasma-icon c11"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c12 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-11"
            >
              <div
                class="c13 c14 treeWidget__nodeIcon"
                data-role="tree-node-icon"
                id="tree-node-icon-11"
              >
                <i
                  class="c9 c10 plasma-icon"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    storage
                  </span>
                </i>
              </div>
              <div
                class="c15 c16 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-11"
              >
                E:
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.tree > rendering tree template 1`] = `
.c22 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c22 * {
  width: 1px;
  height: 1px;
}

.c9 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c9 > span {
  display: inline-block;
}

.c9.c9 {
  max-width: unset;
}

.c6 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c6 .c8 {
  user-select: none;
}

.c6 .c8 {
  color: inherit;
}

.c6 .c8 {
  font-size: inherit;
}

.c6:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c6.c6 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c6.c6 > .c8 {
  display: block;
}

.c17 {
  align-items: center;
  border: 2px solid transparent;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c17 .c8 {
  user-select: none;
}

.c17 .c8 {
  color: inherit;
}

.c17 .c8 {
  font-size: inherit;
}

.c17.c17 .c8 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c17.c17 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c17.c17 > .c8 {
  display: block;
}

.c0 {
  isolation: isolate;
}

.c1 {
  list-style: none;
  padding-left: 0px;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
}

.c3 {
  position: relative;
}

.c3 > .dnd-dropTarget {
  bottom: 0px;
  height: 8px;
  position: absolute;
  width: 100%;
}

.c3 > .dnd-dropTarget + .dnd-dropTarget {
  bottom: auto;
  top: 0px;
}

.c4 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(64px);
  position: relative;
}

.c4::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c4.c4 {
  padding-left: calc(40px);
}

.c4:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c14 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
}

.c14::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c14.c14 {
  padding-left: calc(72px);
}

.c14:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c19 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(128px);
  position: relative;
}

.c19::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c19.c19 {
  padding-left: calc(104px);
}

.c19:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c20 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(160px);
  position: relative;
}

.c20::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c20.c20 {
  padding-left: calc(136px);
}

.c20:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c21 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
  background-color: rgb(241, 242, 244);
  color: rgb(169, 179, 188);
  font-weight: 400;
}

.c21::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c21.c21 {
  padding-left: calc(72px);
}

.c21:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c21 .c15 .c8 {
  color: inherit;
}

.c23 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(128px);
  position: relative;
  background-color: rgb(245, 251, 255);
  cursor: default;
}

.c23::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c23.c23 {
  padding-left: calc(104px);
}

.c23::before {
  border-left: 4px solid rgb(5, 104, 174);
}

.c24 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(160px);
  position: relative;
  background-color: rgb(236, 249, 235);
}

.c24::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c24.c24 {
  padding-left: calc(136px);
}

.c24:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c25 {
  min-height: 48px;
  min-width: 300px;
  padding-left: calc(128px);
  position: relative;
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c25::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c25.c25 {
  padding-left: calc(104px);
}

.c25:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c5 {
  align-items: flex-start;
  display: flex;
  height: auto;
  margin-left: -40px;
  position: absolute;
  text-decoration: none;
}

.c7 {
  border-radius: 50%;
  font-size: 1.5rem;
  height: 32px;
  margin: 8px 0px;
  min-height: 32px;
  width: 32px;
}

.c7:not(:disabled) {
  color: rgb(5, 104, 174);
}

.c7:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  outline-offset: -1px;
}

.c18 {
  border-radius: 50%;
  font-size: 1.5rem;
  height: 32px;
  margin: 8px 0px;
  min-height: 32px;
  width: 32px;
}

.c18:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  outline-offset: -1px;
}

.c10 {
  font-weight: 600;
}

.c13 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: normal;
  overflow: hidden;
  padding: 16px 0px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c16 {
  align-items: flex-start;
  box-sizing: border-box;
  display: flex;
  height: auto;
  justify-content: center;
  left: 0px;
  min-height: 48px;
  padding: 16px 0px;
  text-align: center;
  vertical-align: middle;
}

.c16 > * {
  display: flex;
  justify-content: center;
}

.c16 > :not(.StyledCounter-sc-egdIVr):not(.StyledTooltipTriggerWrapper-sc-cBsekp) {
  font-size: 1rem;
  max-height: 20px;
  width: 20px;
}

.c16 + .c12 {
  margin-left: 8px;
}

.c11 {
  display: flex;
  position: relative;
}

@media (pointer: coarse) {
  .c6:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c6:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c6:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c4:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c14:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c14:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c14:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c19:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c19:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c19:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c20:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c20:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c20:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c21:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c23:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c23:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c24:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c24:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c24:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c25:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c25:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c25:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c7:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    color: rgb(5, 104, 174);
  }
}

@media (pointer: fine) {
  .c7:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c18:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    color: rgb(5, 104, 174);
  }
}

@media (pointer: fine) {
  .c18:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    color: rgb(213, 0, 117);
  }
}

<div
  class="c0 treeWidget"
  data-role="tree"
  id="container"
>
  <div
    class="c1 treeWidget__nodes"
    data-role="tree-nodes"
    id="tree-root-node-container"
    role="list"
  >
    <div
      class="c2 c3 treeWidget__node treeWidget__node--level-0"
      data-role="tree-node"
      data-tree-level="0"
      id="tree-node-root-node"
      role="listitem"
    >
      <div
        class="c4 treeWidget__nodeContent"
        data-role="tree-node-content"
        id="tree-node-content-root-node"
        tabindex="-1"
      >
        <div
          class="c5 treeWidget__nodeArrow treeWidget__nodeArrow--active"
          data-role="tree-node-expander"
          id="tree-node-arrow-root-node"
        >
          <button
            aria-expanded="true"
            aria-label="Collapse subitems"
            aria-labelledby="tree-node-name-root-node"
            class="c6 button button--icon c7"
            data-role="button"
            data-type="icon"
            title="Collapse subitems"
            type="button"
          >
            <i
              class="c8 c9 plasma-icon c10"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                expand_more
              </span>
            </i>
          </button>
        </div>
        <div
          class="c11 treeWidget__nodeTitle"
          data-role="tree-node-title"
          id="tree-node-title-root-node"
        >
          <div
            class="c12 c13 treeWidget__nodeName"
            data-role="tree-node-name"
            id="tree-node-name-root-node"
          >
            Root
          </div>
        </div>
      </div>
      <div
        class="treeWidget__subnodes"
        data-role="tree-subnodes"
        id="tree-sub-node-root-node"
        role="list"
      >
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-0"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-0"
            tabindex="-1"
          >
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-0"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-0"
              >
                Plain node
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-1"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-1"
            tabindex="-1"
          >
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-1"
            >
              <div
                class="c15 c16 treeWidget__nodeIcon"
                data-role="tree-node-icon"
                id="tree-node-icon-1"
              >
                <i
                  class="c8 c9 plasma-icon"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    computer
                  </span>
                </i>
              </div>
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-1"
              >
                Node with icon
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-5"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-5"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-5"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-5"
                class="c17 button button--icon c18"
                data-role="button"
                data-type="icon"
                disabled=""
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-5"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-5"
              >
                Node with arrow
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-6"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-6"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-6"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-6"
                class="c6 button button--icon c18"
                data-role="button"
                data-type="icon"
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-6"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-6"
              >
                Node with interactive arrow
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-2"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-2"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-2"
            >
              <button
                aria-expanded="true"
                aria-label="Collapse subitems"
                aria-labelledby="tree-node-name-2"
                class="c17 button button--icon c18"
                data-role="button"
                data-type="icon"
                disabled=""
                title="Collapse subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    expand_more
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-2"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-2"
              >
                Nested node level 0
              </div>
            </div>
          </div>
          <div
            class="treeWidget__subnodes"
            data-role="tree-subnodes"
            id="tree-sub-node-2"
            role="list"
          >
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-3"
              role="listitem"
            >
              <div
                class="c19 treeWidget__nodeContent"
                data-role="tree-node-content"
                id="tree-node-content-3"
                tabindex="-1"
              >
                <div
                  class="c5 treeWidget__nodeArrow"
                  data-role="tree-node-expander"
                  id="tree-node-arrow-3"
                >
                  <button
                    aria-expanded="true"
                    aria-label="Collapse subitems"
                    aria-labelledby="tree-node-name-3"
                    class="c17 button button--icon c18"
                    data-role="button"
                    data-type="icon"
                    disabled=""
                    title="Collapse subitems"
                    type="button"
                  >
                    <i
                      class="c8 c9 plasma-icon c10"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        expand_more
                      </span>
                    </i>
                  </button>
                </div>
                <div
                  class="c11 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-3"
                >
                  <div
                    class="c12 c13 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-3"
                  >
                    Nested node level 1
                  </div>
                </div>
              </div>
              <div
                class="treeWidget__subnodes"
                data-role="tree-subnodes"
                id="tree-sub-node-3"
                role="list"
              >
                <div
                  class="c2 c3 treeWidget__node treeWidget__node--level-3"
                  data-role="tree-node"
                  data-tree-level="3"
                  id="tree-node-4"
                  role="listitem"
                >
                  <div
                    class="c20 treeWidget__nodeContent"
                    data-role="tree-node-content"
                    id="tree-node-content-4"
                    tabindex="-1"
                  >
                    <div
                      class="c5 treeWidget__nodeArrow"
                      data-role="tree-node-expander"
                      id="tree-node-arrow-4"
                    >
                      <button
                        aria-expanded="false"
                        aria-label="Expand subitems"
                        aria-labelledby="tree-node-name-4"
                        class="c17 button button--icon c18"
                        data-role="button"
                        data-type="icon"
                        disabled=""
                        title="Expand subitems"
                        type="button"
                      >
                        <i
                          class="c8 c9 plasma-icon c10"
                          data-role="plasma-icon"
                        >
                          <span
                            aria-hidden="true"
                          >
                            chevron_right
                          </span>
                        </i>
                      </button>
                    </div>
                    <div
                      class="c11 treeWidget__nodeTitle"
                      data-role="tree-node-title"
                      id="tree-node-title-4"
                    >
                      <div
                        class="c12 c13 treeWidget__nodeName"
                        data-role="tree-node-name"
                        id="tree-node-name-4"
                      >
                        Nested node level 2
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-7"
          role="listitem"
        >
          <div
            class="c21 treeWidget__nodeContent treeWidget__nodeContent--disabled"
            data-role="tree-node-content"
            id="tree-node-content-7"
          >
            <span
              class="c22 -u-unseenButRead"
              data-role="hidden-text"
            >
              Disabled, 
            </span>
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-7"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-7"
                class="c6 button button--icon c18"
                data-role="button"
                data-type="icon"
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-7"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-7"
              >
                Disabled node
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-8"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-8"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow treeWidget__nodeArrow--active"
              data-role="tree-node-expander"
              id="tree-node-arrow-8"
            >
              <button
                aria-expanded="true"
                aria-label="Collapse subitems"
                aria-labelledby="tree-node-name-8"
                class="c6 button button--icon c7"
                data-role="button"
                data-type="icon"
                title="Collapse subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    expand_more
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-8"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-8"
              >
                Node status
              </div>
            </div>
          </div>
          <div
            class="treeWidget__subnodes"
            data-role="tree-subnodes"
            id="tree-sub-node-8"
            role="list"
          >
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-9"
              role="listitem"
            >
              <div
                aria-selected="true"
                class="c23 treeWidget__nodeContent treeWidget__nodeContent--selected"
                data-role="tree-node-content"
                id="tree-node-content-9"
                tabindex="-1"
              >
                <span
                  class="c22 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selected, 
                </span>
                <div
                  class="c5 treeWidget__nodeArrow treeWidget__nodeArrow--active"
                  data-role="tree-node-expander"
                  id="tree-node-arrow-9"
                >
                  <button
                    aria-expanded="true"
                    aria-label="Collapse subitems"
                    aria-labelledby="tree-node-name-9"
                    class="c6 button button--icon c7"
                    data-role="button"
                    data-type="icon"
                    title="Collapse subitems"
                    type="button"
                  >
                    <i
                      class="c8 c9 plasma-icon c10"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        expand_more
                      </span>
                    </i>
                  </button>
                </div>
                <div
                  class="c11 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-9"
                >
                  <div
                    class="c12 c13 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-9"
                  >
                    Selected node
                  </div>
                </div>
              </div>
              <div
                class="treeWidget__subnodes"
                data-role="tree-subnodes"
                id="tree-sub-node-9"
                role="list"
              >
                <div
                  class="c2 c3 treeWidget__node treeWidget__node--level-3"
                  data-role="tree-node"
                  data-tree-level="3"
                  id="tree-node-11"
                  role="listitem"
                >
                  <div
                    class="c24 treeWidget__nodeContent treeWidget__nodeContent--success"
                    data-role="tree-node-content"
                    id="tree-node-content-11"
                    tabindex="-1"
                  >
                    <span
                      class="c22 -u-unseenButRead"
                      data-role="hidden-text"
                    >
                      Success, 
                    </span>
                    <div
                      class="c11 treeWidget__nodeTitle"
                      data-role="tree-node-title"
                      id="tree-node-title-11"
                    >
                      <div
                        class="c12 c13 treeWidget__nodeName"
                        data-role="tree-node-name"
                        id="tree-node-name-11"
                      >
                        Highlight-variant success node
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-10"
              role="listitem"
            >
              <div
                class="c25 treeWidget__nodeContent treeWidget__nodeContent--highlighted"
                data-role="tree-node-content"
                id="tree-node-content-10"
                tabindex="-1"
              >
                <span
                  class="c22 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Highlighted, 
                </span>
                <div
                  class="c11 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-10"
                >
                  <div
                    class="c12 c13 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-10"
                  >
                    Highlighted node
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.tree > rendering tree template fitToParent 1`] = `
.c22 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c22 * {
  width: 1px;
  height: 1px;
}

.c9 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c9 > span {
  display: inline-block;
}

.c9.c9 {
  max-width: unset;
}

.c6 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c6 .c8 {
  user-select: none;
}

.c6 .c8 {
  color: inherit;
}

.c6 .c8 {
  font-size: inherit;
}

.c6:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c6.c6 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c6.c6 > .c8 {
  display: block;
}

.c17 {
  align-items: center;
  border: 2px solid transparent;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c17 .c8 {
  user-select: none;
}

.c17 .c8 {
  color: inherit;
}

.c17 .c8 {
  font-size: inherit;
}

.c17.c17 .c8 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c17.c17 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c17.c17 > .c8 {
  display: block;
}

.c0 {
  height: 100%;
  isolation: isolate;
}

.c1 {
  height: 100%;
  list-style: none;
  padding-left: 0px;
  margin: 0px;
  overflow-y: auto;
  -webkit-tap-highlight-color: transparent;
}

.c3 {
  position: relative;
}

.c3 > .dnd-dropTarget {
  bottom: 0px;
  height: 8px;
  position: absolute;
  width: 100%;
}

.c3 > .dnd-dropTarget + .dnd-dropTarget {
  bottom: auto;
  top: 0px;
}

.c4 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(64px);
  position: relative;
}

.c4::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c4.c4 {
  padding-left: calc(40px);
}

.c4:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c14 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
}

.c14::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c14.c14 {
  padding-left: calc(72px);
}

.c14:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c19 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(128px);
  position: relative;
}

.c19::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c19.c19 {
  padding-left: calc(104px);
}

.c19:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c20 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(160px);
  position: relative;
}

.c20::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c20.c20 {
  padding-left: calc(136px);
}

.c20:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c21 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(96px);
  position: relative;
  background-color: rgb(241, 242, 244);
  color: rgb(169, 179, 188);
  font-weight: 400;
}

.c21::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c21.c21 {
  padding-left: calc(72px);
}

.c21:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c21 .c15 .c8 {
  color: inherit;
}

.c23 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(128px);
  position: relative;
  background-color: rgb(245, 251, 255);
  cursor: default;
}

.c23::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c23.c23 {
  padding-left: calc(104px);
}

.c23::before {
  border-left: 4px solid rgb(5, 104, 174);
}

.c24 {
  min-height: 48px;
  min-width: 300px;
  outline: none;
  padding-left: calc(160px);
  position: relative;
  background-color: rgb(236, 249, 235);
}

.c24::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c24.c24 {
  padding-left: calc(136px);
}

.c24:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c25 {
  min-height: 48px;
  min-width: 300px;
  padding-left: calc(128px);
  position: relative;
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c25::before {
  border-bottom: 1px solid rgb(211, 214, 220);
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
}

[data-role="table-body-cell"] > .c2 > .c25.c25 {
  padding-left: calc(104px);
}

.c25:focus {
  background-color: rgb(241, 242, 244);
  outline: none;
}

.c5 {
  align-items: flex-start;
  display: flex;
  height: auto;
  margin-left: -40px;
  position: absolute;
  text-decoration: none;
}

.c7 {
  border-radius: 50%;
  font-size: 1.5rem;
  height: 32px;
  margin: 8px 0px;
  min-height: 32px;
  width: 32px;
}

.c7:not(:disabled) {
  color: rgb(5, 104, 174);
}

.c7:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  outline-offset: -1px;
}

.c18 {
  border-radius: 50%;
  font-size: 1.5rem;
  height: 32px;
  margin: 8px 0px;
  min-height: 32px;
  width: 32px;
}

.c18:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  outline-offset: -1px;
}

.c10 {
  font-weight: 600;
}

.c13 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: normal;
  overflow: hidden;
  padding: 16px 0px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c16 {
  align-items: flex-start;
  box-sizing: border-box;
  display: flex;
  height: auto;
  justify-content: center;
  left: 0px;
  min-height: 48px;
  padding: 16px 0px;
  text-align: center;
  vertical-align: middle;
}

.c16 > * {
  display: flex;
  justify-content: center;
}

.c16 > :not(.StyledCounter-sc-egdIVr):not(.StyledTooltipTriggerWrapper-sc-cBsekp) {
  font-size: 1rem;
  max-height: 20px;
  width: 20px;
}

.c16 + .c12 {
  margin-left: 8px;
}

.c11 {
  display: flex;
  position: relative;
}

@media (pointer: coarse) {
  .c6:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c6:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c6:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c4:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c14:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c14:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c14:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c19:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c19:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c19:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c20:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c20:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c20:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c21:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c23:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c23:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c24:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c24:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c24:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c25:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: coarse) {
  .c25:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
}

@media (pointer: fine) {
  .c25:hover {
    background-color: rgb(241, 242, 244);
  }
}

@media (pointer: coarse) {
  .c7:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    color: rgb(5, 104, 174);
  }
}

@media (pointer: fine) {
  .c7:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c18:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    color: rgb(5, 104, 174);
  }
}

@media (pointer: fine) {
  .c18:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    color: rgb(213, 0, 117);
  }
}

<div
  class="c0 treeWidget treeWidget--fit"
  data-role="tree"
  id="container"
>
  <div
    class="c1 treeWidget__nodes"
    data-role="tree-nodes"
    id="tree-root-node-container"
    role="list"
  >
    <div
      class="c2 c3 treeWidget__node treeWidget__node--level-0"
      data-role="tree-node"
      data-tree-level="0"
      id="tree-node-root-node"
      role="listitem"
    >
      <div
        class="c4 treeWidget__nodeContent"
        data-role="tree-node-content"
        id="tree-node-content-root-node"
        tabindex="-1"
      >
        <div
          class="c5 treeWidget__nodeArrow treeWidget__nodeArrow--active"
          data-role="tree-node-expander"
          id="tree-node-arrow-root-node"
        >
          <button
            aria-expanded="true"
            aria-label="Collapse subitems"
            aria-labelledby="tree-node-name-root-node"
            class="c6 button button--icon c7"
            data-role="button"
            data-type="icon"
            title="Collapse subitems"
            type="button"
          >
            <i
              class="c8 c9 plasma-icon c10"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                expand_more
              </span>
            </i>
          </button>
        </div>
        <div
          class="c11 treeWidget__nodeTitle"
          data-role="tree-node-title"
          id="tree-node-title-root-node"
        >
          <div
            class="c12 c13 treeWidget__nodeName"
            data-role="tree-node-name"
            id="tree-node-name-root-node"
          >
            Root
          </div>
        </div>
      </div>
      <div
        class="treeWidget__subnodes"
        data-role="tree-subnodes"
        id="tree-sub-node-root-node"
        role="list"
      >
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-0"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-0"
            tabindex="-1"
          >
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-0"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-0"
              >
                Plain node
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-1"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-1"
            tabindex="-1"
          >
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-1"
            >
              <div
                class="c15 c16 treeWidget__nodeIcon"
                data-role="tree-node-icon"
                id="tree-node-icon-1"
              >
                <i
                  class="c8 c9 plasma-icon"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    computer
                  </span>
                </i>
              </div>
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-1"
              >
                Node with icon
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-5"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-5"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-5"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-5"
                class="c17 button button--icon c18"
                data-role="button"
                data-type="icon"
                disabled=""
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-5"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-5"
              >
                Node with arrow
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-6"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-6"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-6"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-6"
                class="c6 button button--icon c18"
                data-role="button"
                data-type="icon"
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-6"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-6"
              >
                Node with interactive arrow
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-2"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-2"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-2"
            >
              <button
                aria-expanded="true"
                aria-label="Collapse subitems"
                aria-labelledby="tree-node-name-2"
                class="c17 button button--icon c18"
                data-role="button"
                data-type="icon"
                disabled=""
                title="Collapse subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    expand_more
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-2"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-2"
              >
                Nested node level 0
              </div>
            </div>
          </div>
          <div
            class="treeWidget__subnodes"
            data-role="tree-subnodes"
            id="tree-sub-node-2"
            role="list"
          >
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-3"
              role="listitem"
            >
              <div
                class="c19 treeWidget__nodeContent"
                data-role="tree-node-content"
                id="tree-node-content-3"
                tabindex="-1"
              >
                <div
                  class="c5 treeWidget__nodeArrow"
                  data-role="tree-node-expander"
                  id="tree-node-arrow-3"
                >
                  <button
                    aria-expanded="true"
                    aria-label="Collapse subitems"
                    aria-labelledby="tree-node-name-3"
                    class="c17 button button--icon c18"
                    data-role="button"
                    data-type="icon"
                    disabled=""
                    title="Collapse subitems"
                    type="button"
                  >
                    <i
                      class="c8 c9 plasma-icon c10"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        expand_more
                      </span>
                    </i>
                  </button>
                </div>
                <div
                  class="c11 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-3"
                >
                  <div
                    class="c12 c13 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-3"
                  >
                    Nested node level 1
                  </div>
                </div>
              </div>
              <div
                class="treeWidget__subnodes"
                data-role="tree-subnodes"
                id="tree-sub-node-3"
                role="list"
              >
                <div
                  class="c2 c3 treeWidget__node treeWidget__node--level-3"
                  data-role="tree-node"
                  data-tree-level="3"
                  id="tree-node-4"
                  role="listitem"
                >
                  <div
                    class="c20 treeWidget__nodeContent"
                    data-role="tree-node-content"
                    id="tree-node-content-4"
                    tabindex="-1"
                  >
                    <div
                      class="c5 treeWidget__nodeArrow"
                      data-role="tree-node-expander"
                      id="tree-node-arrow-4"
                    >
                      <button
                        aria-expanded="false"
                        aria-label="Expand subitems"
                        aria-labelledby="tree-node-name-4"
                        class="c17 button button--icon c18"
                        data-role="button"
                        data-type="icon"
                        disabled=""
                        title="Expand subitems"
                        type="button"
                      >
                        <i
                          class="c8 c9 plasma-icon c10"
                          data-role="plasma-icon"
                        >
                          <span
                            aria-hidden="true"
                          >
                            chevron_right
                          </span>
                        </i>
                      </button>
                    </div>
                    <div
                      class="c11 treeWidget__nodeTitle"
                      data-role="tree-node-title"
                      id="tree-node-title-4"
                    >
                      <div
                        class="c12 c13 treeWidget__nodeName"
                        data-role="tree-node-name"
                        id="tree-node-name-4"
                      >
                        Nested node level 2
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-7"
          role="listitem"
        >
          <div
            class="c21 treeWidget__nodeContent treeWidget__nodeContent--disabled"
            data-role="tree-node-content"
            id="tree-node-content-7"
          >
            <span
              class="c22 -u-unseenButRead"
              data-role="hidden-text"
            >
              Disabled, 
            </span>
            <div
              class="c5 treeWidget__nodeArrow"
              data-role="tree-node-expander"
              id="tree-node-arrow-7"
            >
              <button
                aria-expanded="false"
                aria-label="Expand subitems"
                aria-labelledby="tree-node-name-7"
                class="c6 button button--icon c18"
                data-role="button"
                data-type="icon"
                title="Expand subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    chevron_right
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-7"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-7"
              >
                Disabled node
              </div>
            </div>
          </div>
        </div>
        <div
          class="c2 c3 treeWidget__node treeWidget__node--level-1"
          data-role="tree-node"
          data-tree-level="1"
          id="tree-node-8"
          role="listitem"
        >
          <div
            class="c14 treeWidget__nodeContent"
            data-role="tree-node-content"
            id="tree-node-content-8"
            tabindex="-1"
          >
            <div
              class="c5 treeWidget__nodeArrow treeWidget__nodeArrow--active"
              data-role="tree-node-expander"
              id="tree-node-arrow-8"
            >
              <button
                aria-expanded="true"
                aria-label="Collapse subitems"
                aria-labelledby="tree-node-name-8"
                class="c6 button button--icon c7"
                data-role="button"
                data-type="icon"
                title="Collapse subitems"
                type="button"
              >
                <i
                  class="c8 c9 plasma-icon c10"
                  data-role="plasma-icon"
                >
                  <span
                    aria-hidden="true"
                  >
                    expand_more
                  </span>
                </i>
              </button>
            </div>
            <div
              class="c11 treeWidget__nodeTitle"
              data-role="tree-node-title"
              id="tree-node-title-8"
            >
              <div
                class="c12 c13 treeWidget__nodeName"
                data-role="tree-node-name"
                id="tree-node-name-8"
              >
                Node status
              </div>
            </div>
          </div>
          <div
            class="treeWidget__subnodes"
            data-role="tree-subnodes"
            id="tree-sub-node-8"
            role="list"
          >
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-9"
              role="listitem"
            >
              <div
                aria-selected="true"
                class="c23 treeWidget__nodeContent treeWidget__nodeContent--selected"
                data-role="tree-node-content"
                id="tree-node-content-9"
                tabindex="-1"
              >
                <span
                  class="c22 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Selected, 
                </span>
                <div
                  class="c5 treeWidget__nodeArrow treeWidget__nodeArrow--active"
                  data-role="tree-node-expander"
                  id="tree-node-arrow-9"
                >
                  <button
                    aria-expanded="true"
                    aria-label="Collapse subitems"
                    aria-labelledby="tree-node-name-9"
                    class="c6 button button--icon c7"
                    data-role="button"
                    data-type="icon"
                    title="Collapse subitems"
                    type="button"
                  >
                    <i
                      class="c8 c9 plasma-icon c10"
                      data-role="plasma-icon"
                    >
                      <span
                        aria-hidden="true"
                      >
                        expand_more
                      </span>
                    </i>
                  </button>
                </div>
                <div
                  class="c11 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-9"
                >
                  <div
                    class="c12 c13 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-9"
                  >
                    Selected node
                  </div>
                </div>
              </div>
              <div
                class="treeWidget__subnodes"
                data-role="tree-subnodes"
                id="tree-sub-node-9"
                role="list"
              >
                <div
                  class="c2 c3 treeWidget__node treeWidget__node--level-3"
                  data-role="tree-node"
                  data-tree-level="3"
                  id="tree-node-11"
                  role="listitem"
                >
                  <div
                    class="c24 treeWidget__nodeContent treeWidget__nodeContent--success"
                    data-role="tree-node-content"
                    id="tree-node-content-11"
                    tabindex="-1"
                  >
                    <span
                      class="c22 -u-unseenButRead"
                      data-role="hidden-text"
                    >
                      Success, 
                    </span>
                    <div
                      class="c11 treeWidget__nodeTitle"
                      data-role="tree-node-title"
                      id="tree-node-title-11"
                    >
                      <div
                        class="c12 c13 treeWidget__nodeName"
                        data-role="tree-node-name"
                        id="tree-node-name-11"
                      >
                        Highlight-variant success node
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c2 c3 treeWidget__node treeWidget__node--level-2"
              data-role="tree-node"
              data-tree-level="2"
              id="tree-node-10"
              role="listitem"
            >
              <div
                class="c25 treeWidget__nodeContent treeWidget__nodeContent--highlighted"
                data-role="tree-node-content"
                id="tree-node-content-10"
                tabindex="-1"
              >
                <span
                  class="c22 -u-unseenButRead"
                  data-role="hidden-text"
                >
                  Highlighted, 
                </span>
                <div
                  class="c11 treeWidget__nodeTitle"
                  data-role="tree-node-title"
                  id="tree-node-title-10"
                >
                  <div
                    class="c12 c13 treeWidget__nodeName"
                    data-role="tree-node-name"
                    id="tree-node-name-10"
                  >
                    Highlighted node
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
